# VIVID3D

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  ColorMap.h  External.cpp  External.h  Face.cpp  IndexedFace.h  KeyframeAnimation.cpp  LICENSE  MANIFEST.in  Main.cpp  Makefile  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Point.cpp  Point.h  README.md  ReadBinFile.h  Surf.cpp  Surf.h  SurfFace.h  Utils.h  cmake_install.cmake  main.cpp  pyproject.toml  requirements.txt  setup.py  valgrind.xml  valgrind_EladNew_20210421.xml  vivid  vivid.cbp  vivid.cpp  vividConfigVersion.cmake  vivid_main
.github/: CONTRIBUTING.md
Examples/: Mesh.h
External_pkgs/MeshDecimation/: mdMeshDecimator.h
Headers/: Animation.h  Face.h  IndexedFace.h  Mesh.h  Model.h  Point.h  Shape.h  SimSurf.h  Surf.h  SurfFace.h  Surfface.h  Utils.h  Vivid.h  surf.h
Libs/: External.cpp  External.h
Libs/FBX/: FindFBX.cmake
Libs/huji-rich-Elad3DFast/: FindVORONOI.cmake
MeshDecimation/: mdMeshDecimator.cpp  mdMeshDecimator.h  mdVector.h  mdVector.inl
Research/: pythonWrapperGuide.docx
Source/Cpp/: Animation.cpp  Main.cpp  Mesh.cpp  Model.cpp  Surf.cpp
Source/Elad/: main.cpp
Source/Python/: Mesh.py
TestModels/: Pyramid_mesh.mtl  Pyramid_model.mtl  arrow_test.mtl
Vivid_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings_python_version/: Makefile  cmake_install.cmake
docs/: Makefile  environment.yml  requirements.txt
docs/source/: api_reference.rst  conf.py  enzo_galexy.rst  examples.rst  gallery.rst  index.rst  pyramid_example.rst  shape_example.rst  vivid_types.rst
huji-rich-Elad3DFast/: CMakeLists.txt
huji-rich-Elad3DFast/source/3D/GeometryCommon/: Face.hpp  RoundGrid3D.hpp  Tessellation3D.cpp
huji-rich-Elad3DFast/source/mpi/: MeshPointsMPI.cpp
huji-rich-Elad3DFast/source/newtonian/two_dimensional/: simple_extensive_updater.cpp
huji-rich-Elad3DFast/source/newtonian/two_dimensional/interpolations/: PCM.cpp
lib/: Decimate.cpp  Decimate.h  External.cpp  External.h  Makefile  cmake_install.cmake
lib/ImportAndExport/: Animation.cpp  Animation.h  AssimpImportExport.cpp  AssimpImportExport.h  BlobData.cpp  BlobData.h  DataToImage.cpp  DataToImage.h  FBXImportExport.cpp  FBXImportExport.h  FbxCode.cpp  FbxCode.h  FbxExportImport.cpp  FbxExportImport.h  FindIMPORTANDEXPORT.cmake  ObjExportImport.cpp  ObjExportImport.h  ObjImportExport.cpp  ObjImportExport.h
lib/MeshDecimation/: mdMeshDecimator.cpp  mdMeshDecimator.h  mdVector.inl
lib/MyBoost/: CMakeLists.txt
lib/SurfacingAlgorithms/: Voronoi.cpp  Voronoi.h
lib/SurfacingAlgorithms/huji-rich-Elad3DFast/: CMakeLists.txt  FindVORONOI.cmake  Makefile  cmake_install.cmake
lib/SurfacingAlgorithms/huji-rich-Elad3DFast/source/3D/GeometryCommon/: Face.cpp  Tetrahedron.hpp  Voronoi3D.cpp  Voronoi3D.hpp
lib/SurfacingAlgorithms/huji-rich-Elad3DFast/source/newtonian/two_dimensional/: hdf5_diagnostics.cpp
lib/SurfacingAlgorithms/huji-rich-Elad3DFast/source/newtonian/two_dimensional/point_motions/: lagrangian.cpp
lib/SurfacingAlgorithms/huji-rich-Elad3DFast/tests/: parallel_run_tests.py
lib/SurfacingAlgorithms/huji-rich-Elad3DFast/visualisation/two_dimensional/matlab/: RichReadFloat.m
lib/assimp/: Assimp.cbp  CMakeLists.txt  Makefile  assimp.pc  revision.h
lib/huji-rich-Elad3DFast/: FindVORONOI.cmake
pybind11/: CMakeLists.txt  pybind11.cbp
pybind11/tests/: test_numpy_dtypes.cpp
pybind11/tools/: FindPythonLibsNew.cmake  pybind11Tools.cmake
src/: ..\test_models\test_wrapper_win.mtl  ColorMap.h  External.cpp  External.h  IndexedFace.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Point.h  ReadBinFile.h  Surf.cpp  Surf.h  SurfFace.h  main.cpp  run_pickle.py  test_wrapper.py  wrapper.cpp
src/AnimationBuilder/: Animation.cpp  Animation.h  FbxFunc.cpp  FbxFunc.h
src/Extra/: Analysis.cpp  Analysis.h  OldTests.cpp  VoronoiSmoothing.cpp  VoronoiSmoothing.h
src/ImportExport/: AssimpImportExport.cpp  AssimpImportExport.h  BlobData.cpp  BlobData.h  ColorMapToPng.cpp  ColorMapToPng.h  ObjImportExport.cpp
src/MeshDecimation/: mdMeshDecimator.cpp
src/ModelBuilder/: Animation.cpp  Animation.h  ErrorMsg.h  Face.h  IndexedFace.h  Line.cpp  Line.h  LogFile.h  MarchingCubesSurface.cpp  MarchingCubesSurface.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelComponent.cpp  ModelComponent.h  ObjExportImport.cpp  ObjExportImport.h  Point.h  PointCloud.cpp  PointCloud.h  PointVector.h  Shapes.cpp  Shapes.h  StopMotionAnimation.cpp  StopMotionAnimation.h  Surf.cpp  Surf.h  SurfByFunc.cpp  SurfByFunc.h  SurfFace.h  Surface.cpp  Surface.h  Vivify.cpp  Vivify.h  VoronoiSurface.cpp  VoronoiSurface.h  VoronoiVolume.cpp  VoronoiVolume.h  (+1 more)
src/Textures/: ColorDefs.cpp  ColorDefs.h  ColorMap.h  Material.h
src/Utils/: ColorDefs.cpp  ColorDefs.h  ColorMap.h  ConstrainedNumbers.cpp  ConstrainedNumbers.h  Errors.h  LogFile.cpp  LogFile.h  Noisify.cpp  Noisify.h  NormalFloat.cpp  NormalFloat.h  Plasma.cpp  Plasma.h  ProgressBar.cpp  ProgressBar.h  ReadBinFile.h  Shapes.cpp  Shapes.h
src/Wrapping/: TypeCasting.h  wrapper.cpp
src/animation/: Animation.cpp  Animation.h  FbxFunc.cpp  FbxFunc.h  Shapes.cpp  Shapes.h
src/cpp/: .Mesh.cpp.swp  .make.swp  IndexedFace.h  Main.cpp  Makefile  Makefile.save  Makefile.save.1  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Point.h  Surf.cpp  Surf.h  SurfFace.h  Utils.h  VoroniTest.cpp.save  VoronoiTest.cpp  VoronoiTestRun  a.out  vivid
src/python/: Model.py  Surf.py
src/vivid3d/: __init__.py  _details.py  utils.py
src/vivid3d.egg-info/: PKG-INFO  SOURCES.txt
temp/: Pyramid.mtl
testModels/: MedicaneModelTest.mtl  Pyramid.mtl
test_models/: testCode_Cmake_mac.mtl  test_wrapper_win.mtl
tests/: main_old.cpp  test.py  testets.glb
tests/test_data/: Blenderfbx.fbx  PyramidProcessing.mtl  (+3 more)
viewer/: notebook_viewer.py
viewer_py/: template.html  viewer.py  vivid.py  volumetric-viewer.py
vivid.egg-info/: PKG-INFO  SOURCES.txt
vivid3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vivid_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+134 files in other folders)
